--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-   "manifest_version": 2,
+   "manifest_version": 3,
    "minimum_chrome_version": "38",
    "name": "ImageDrawer",
    "short_name": "ImageDrawer",
@@ -11,10 +11,9 @@
       "16": "assets/icon_16.png"
    },
    "background": {
-      "persistent": false,
-      "scripts": [ "js/jquery-3.6.0.js", "js/background.js" ]
+      "service_worker": "js/background.js"
    },
-   "browser_action": {
+   "action": {
       "default_icon": {
          "128": "assets/icon_128.png",
          "16": "assets/icon_16.png"
@@ -24,6 +23,7 @@
    },
    "content_scripts": [ {
       "js": [ "js/jquery-3.6.0.js", "js/contentScript.js", "js/DrawAbleCanvas.js" ],
-      "matches": [ "\u003Call_urls>" ]
+      "run_at":"document_start",
+      "matches": [ "<all_urls>" ]
    } ]
 }
